Fix the round icons to be visible in IE. Also add ellipsis for slats.
https://canopytax.atlassian.net/browse/TR-83

--- a/src/components/slats/slats.less
+++ b/src/components/slats/slats.less
@@ -208,6 +208,9 @@
 			font-weight: 400;
 			font-size: 1.6rem;
 			color: @dark-gray;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
 		}
 	}
 
